[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/background.png" type="Texture" id=1]
[ext_resource path="res://src/Blocks.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Ball.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/MainScene.gd" type="Script" id=5]
[ext_resource path="res://src/Interface.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/Menu.tscn" type="PackedScene" id=7]
[ext_resource path="res://assets/xolonium-regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 960, 0 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 736 )

[sub_resource type="SegmentShape2D" id=3]
b = Vector2( 0, 736 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 8 )

[node name="Node" type="Node"]
script = ExtResource( 5 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 960.0
margin_bottom = 720.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Blocks" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 4 )]
position = Vector2( 480, 360 )

[node name="Platform" parent="." instance=ExtResource( 3 )]
position = Vector2( 480, 700 )

[node name="Borders" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders"]
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Borders"]
position = Vector2( 960, 0 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Borders"]
shape = SubResource( 3 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Interface" parent="." instance=ExtResource( 6 )]

[node name="Menu" parent="." instance=ExtResource( 7 )]

[node name="CountDown" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -112.0
custom_fonts/font = SubResource( 4 )
text = "0
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="L_down" from="Interface" to="." method="_on_Interface_leftDOWN"]
[connection signal="L_up" from="Interface" to="." method="_on_Interface_leftUP"]
[connection signal="PauseResumeButton" from="Interface" to="." method="pauseResumeButton"]
[connection signal="R_down" from="Interface" to="." method="_on_Interface_rightDOWN"]
[connection signal="R_up" from="Interface" to="." method="_on_Interface_rightUP"]
[connection signal="desktop" from="Menu" to="." method="_on_Menu_desktop"]
[connection signal="mobile" from="Menu" to="." method="_on_Menu_mobile"]
